--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@cdut007/component-vue",
-  "version": "1.0.2",
+  "version": "1.0.3-alpha-1",
   "description": "ui组件库",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "lint": "vue-cli-service lint",
     "test": "echo \"Error: no test specified\" && exit 1",
